This is the final version in C++. It seems to not to count all memory accesses: reported ranges of arrays seem to short.

--- a/work/Makefile
+++ b/work/Makefile
@@ -1,7 +1,7 @@
 
 CC = g++
-CFLAGS = -pipe -g
-CXXFLAGS = -pipe -g
+CFLAGS = -pipe -g -W -Wall
+CXXFLAGS = -pipe -g -W -Wall
 LDFLAGS = -g
 
 mem4fft: mem4fft.o fft235.o zfft1d.o
